--- a/app/views/welcome/search.html.erb
+++ b/app/views/welcome/search.html.erb
@@ -1,39 +1,79 @@
 <h1>Search Results</h1>
 
 <h1>Songs</h1>
-<% if @resultsName!= nil %>
+<% if @resultsName.empty? %>
+<h2>No songs found</h2>
+
+<% else %>
+<table style="width:80%; margin-left: auto;margin-right: auto;">
+  <tr>
+    <th>Title</th>
+    <th>Artist</th>
+    <th>Genre</th>
+    <th>Year</th>
+    <th>Duration</th>
+  </tr>
 <% @resultsName.each do |song|%>
 
-<p><%=song.title%></p>
+  <tr>
+    <th><%=song.title%></th>
+    <th><%=song.artist%></th>
+    <th><%=song.genre%></th>
+    <th><%=song.year%></th>
+    <th><%=song.duration%></th>
+  </tr>
 
 <% end %>
-<% else %>
-<h2>No songs found</h2>
+</table>
 <% end %>
 
 <h1>Artist</h1>
 <% if @resultsArtist.empty? %>
 <h2>No songs found</h2>
 <% else %>
+<table style="width:80%; margin-left: auto;margin-right: auto;">
+  <tr>
+    <th>Title</th>
+    <th>Artist</th>
+    <th>Genre</th>
+    <th>Year</th>
+    <th>Duration</th>
+  </tr>
 <% @resultsArtist.each do |song|%>
-<p><%=song.title%></p>
+
+  <tr>
+    <th><%=song.title%></th>
+    <th><%=song.artist%></th>
+    <th><%=song.genre%></th>
+    <th><%=song.year%></th>
+    <th><%=song.duration%></th>
+  </tr>
+
 <% end %>
+</table>
 <% end %>
 
 <h1>Genre</h1>
 <% if @resultsGenre.empty? %>
 <h2>No songs found</h2>
 <% else %>
+<tr>
+  <th>Title</th>
+  <th>Artist</th>
+  <th>Genre</th>
+  <th>Year</th>
+  <th>Duration</th>
+</tr>
 <% @resultsGenre.each do |song|%>
-<p><%=song.title%></p>
-<% end %>
-<% end %>
 
-<h1>Genre</h1>
-<% if @resultsGenre.empty? %>
-<h2>No songs found</h2>
-<% else %>
-<% @resultsGenre.each do |song|%>
-<p><%=song.title%></p>
+<tr>
+  <th><%=song.title%></th>
+  <th><%=song.artist%></th>
+  <th><%=song.genre%></th>
+  <th><%=song.year%></th>
+  <th><%=song.duration%></th>
+</tr>
+
 <% end %>
+</table>
 <% end %>
