--- a/app/views/welcome/search.html.erb
+++ b/app/views/welcome/search.html.erb
@@ -57,22 +57,49 @@
 <% if @resultsGenre.empty? %>
 <h2>No songs found</h2>
 <% else %>
-<tr>
-  <th style='width: 15%;'>Title</th>
-  <th style='width: 15%;'>Artist</th>
-  <th style='width: 15%;'>Genre</th>
-  <th style='width: 15%;'>Year</th>
-  <th style='width: 15%;'>Duration</th>
-</tr>
+<table style="width:80%; margin-left: auto;margin-right: auto;">
+  <tr>
+    <th style='width: 15%;'>Title</th>
+    <th style='width: 15%;'>Artist</th>
+    <th style='width: 15%;'>Genre</th>
+    <th style='width: 15%;'>Year</th>
+    <th style='width: 15%;'>Duration</th>
+  </tr>
 <% @resultsGenre.each do |song|%>
 
-<tr>
-  <th style='width: 15%;'><%=song.title%></th>
-  <th style='width: 15%;'><%=song.artist%></th>
-  <th style='width: 15%;'><%=song.genre%></th>
-  <th style='width: 15%;'><%=song.year%></th>
-  <th style='width: 15%;'><%=song.duration%></th>
-</tr>
+  <tr>
+    <th style='width: 15%;'><%=song.title%></th>
+    <th style='width: 15%;'><%=song.artist%></th>
+    <th style='width: 15%;'><%=song.genre%></th>
+    <th style='width: 15%;'><%=song.year%></th>
+    <th style='width: 15%;'><%=song.duration%></th>
+  </tr>
+
+<% end %>
+</table>
+<% end %>
+
+<h1>Year</h1>
+<% if @resultsYear.empty? %>
+<h2>No songs found</h2>
+<% else %>
+<table style="width:80%; margin-left: auto;margin-right: auto;">
+  <tr>
+    <th style='width: 15%;'>Title</th>
+    <th style='width: 15%;'>Artist</th>
+    <th style='width: 15%;'>Genre</th>
+    <th style='width: 15%;'>Year</th>
+    <th style='width: 15%;'>Duration</th>
+  </tr>
+<% @resultsYear.each do |song|%>
+
+  <tr>
+    <th style='width: 15%;'><%=song.title%></th>
+    <th style='width: 15%;'><%=song.artist%></th>
+    <th style='width: 15%;'><%=song.genre%></th>
+    <th style='width: 15%;'><%=song.year%></th>
+    <th style='width: 15%;'><%=song.duration%></th>
+  </tr>
 
 <% end %>
 </table>
