--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
     <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <%= link_to "Music Streamer", root_path, class: "navbar-brand" %>
+          <%# Not working for some reason %>
+          <%# link_to "Music Streamer", root_path, class: "navbar-brand" %>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <% if current_user.present? %>
