--- a/app/views/profile/view.html.erb
+++ b/app/views/profile/view.html.erb
@@ -6,4 +6,5 @@
   <%= line %> <br>
   <% end %>
 </p>
-<%= link_to("Edit Profile", { action: "edit_profile_page" }) %>
+<%= link_to("Edit Profile", { action: "edit_page" }) %>
+<%= link_to("Back", { action: 'index',controller: 'welcome' }) %>
