Profile form upon sign up, redirections changed

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -34,6 +34,7 @@
     <td><p><%=link_to 'delete',action: 'delete_playlist' ,playlist_id: playlist.id%></p></td>
     <td><%= link_to 'move up' %></td>
     <td><%= link_to 'move down' %></td>
+    <td><%= link_to 'add songs' %></td>
   </tr>
   <% end %>
 </table>
