--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -40,13 +40,15 @@
   <h1>Users</h1>
   <table style='width:80%; margin-left:auto; margin-right:auto;'>
     <% @profiles.each do |profile|%>
-  <tr>
-    <td><p><%=profile.first_name%></p></td>
-    <td><p><%=profile.last_name%></p></td>
-      <td>
-        <%= link_to "Send Message", "#", class: "btn btn-success btn-xs start-conversation",
-                    "data-sid" => current_user.id, "data-rip" => profile.user_id %>
-      </td>
-  </tr>
+      <% if current_user.id != profile.user_id %>
+        <tr>
+          <td><p><%=profile.first_name%></p></td>
+          <td><p><%=profile.last_name%></p></td>
+            <td>
+              <%= link_to "Send Message", "#", class: "btn btn-success btn-xs start-conversation",
+                          "data-sid" => current_user.id, "data-rip" => profile.user_id %>
+            </td>
+        </tr>
+    <% end %>
   <% end %>
 </table>
