--- a/app/views/welcome/search.html.erb
+++ b/app/views/welcome/search.html.erb
@@ -7,80 +7,12 @@
 }.compact.reverse.join(' ')
 end %>
 <h1>Search Results</h1>
-
+<%= link_to "Back",action:'index' %>
 <h1>Songs</h1>
-<% if @resultsName.empty? %>
-<h2>No songs found</h2>
-
-<% else %>
-<table style="width:80%; margin-left: auto;margin-right: auto;">
-  <tr>
-    <th style='width: 15%;'>Title</th>
-    <th style='width: 15%;'>Artist</th>
-    <th style='width: 15%;'>Genre</th>
-    <th style='width: 15%;'>Year</th>
-    <th style='width: 15%;'>Duration</th>
-  </tr>
-<% @resultsName.each do |song|%>
-
-  <tr>
-    <th style='width: 15%;'><%=song.title%></th>
-    <th style='width: 15%;'><%=song.artist%></th>
-    <th style='width: 15%;'><%=song.genre%></th>
-    <th style='width: 15%;'><%=song.year%></th>
-    <th style='width: 15%;'><%=humanize(song.duration)%></th>
-  </tr>
-
-<% end %>
-</table>
-<% end %>
+<%= render partial: 'playlist_select', locals: {results: @resultsName} %>
 
 <h1>Artist</h1>
-<% if @resultsArtist.empty? %>
-<h2>No songs found</h2>
-<% else %>
-<table style="width:80%; margin-left: auto;margin-right: auto;">
-  <tr>
-    <th style='width: 15%;'>Title</th>
-    <th style='width: 15%;'>Artist</th>
-    <th style='width: 15%;'>Genre</th>
-    <th style='width: 15%;'>Year</th>
-    <th style='width: 15%;'>Duration</th>
-  </tr>
-<% @resultsArtist.each do |song|%>
-
-  <tr>
-    <th style='width: 15%;'><%=song.title%></th>
-    <th style='width: 15%;'><%=song.artist%></th>
-    <th style='width: 15%;'><%=song.genre%></th>
-    <th style='width: 15%;'><%=song.year%></th>
-    <th style='width: 15%;'><%=humanize(song.duration)%></th>
-  </tr>
-
-<% end %>
-</table>
-<% end %>
+<%= render partial: 'playlist_select', locals: {results: @resultsArtist} %>
 
 <h1>Genre</h1>
-<% if @resultsGenre.empty? %>
-<h2>No songs found</h2>
-<% else %>
-<table style="width:80%; margin-left: auto;margin-right: auto;">
-  <tr>
-    <th style='width: 15%;'>Title</th>
-    <th style='width: 15%;'>Artist</th>
-    <th style='width: 15%;'>Genre</th>
-    <th style='width: 15%;'>Year</th>
-    <th style='width: 15%;'>Duration</th>
-  </tr>
-<% @resultsGenre.each do |song|%>
-<tr>
-  <th style='width: 15%;'><%=song.title%></th>
-  <th style='width: 15%;'><%=song.artist%></th>
-  <th style='width: 15%;'><%=song.genre%></th>
-  <th style='width: 15%;'><%=song.year%></th>
-  <th style='width: 15%;'><%=humanize(song.duration)%></th>
-</tr>
-<% end %>
-</table>
-<% end %>
+<%= render partial: 'playlist_select', locals: {results: @resultsGenre} %>
