--- a/app/views/welcome/view_playlist.html.erb
+++ b/app/views/welcome/view_playlist.html.erb
@@ -6,6 +6,7 @@
   end
 }.compact.reverse.join(' ')
 end %>
+<%= link_to "Back",action:'index' %>
 <% if @playlist_songs.empty? %>
 <h3>No songs in playlist</h3>
 <% else %>
