--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,5 +31,7 @@
     <p class="alert"><%= alert %></p>
 
     <%= yield %>
+
+    <audio id="chatAudio"><source src="/sounds/notification.mp3" type="audio/mpeg"></audio>
   </body>
 </html>
